--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -113,6 +113,15 @@
 % \newpage
 %}
 
+% Tables d'index:
+\clearpage
+\section*{Index des ressources et SAE}
+\subsection*{Semestre 1}
+\listeTitreRessourceIndex{A}
+\listeTitreSAEIndex{A}
+\subsection*{Semestre 2}
+\listeTitreRessourceIndex{B}
+\listeTitreSAEIndex{B}
 
 
 \section{Compétences du tronc commun}
